[gd_scene load_steps=3 format=3 uid="uid://bna1mxv87rnl3"]

[ext_resource type="Script" path="res://menu/mainMenu.gd" id="1_cv63h"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_xl48r"]
load_path = "res://.godot/imported/background.png-34ec9bc00e22decd71f136b155377768.ctex"

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1197.0
offset_bottom = 899.0
script = ExtResource("1_cv63h")

[node name="TextureRect" type="TextureRect" parent="."]
z_index = -1
layout_mode = 0
offset_left = -3.0
offset_top = -18.0
offset_right = 1196.0
offset_bottom = 1006.0
texture = SubResource("CompressedTexture2D_xl48r")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 476.0
offset_top = 368.0
offset_right = 699.0
offset_bottom = 603.0

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start Game
"

[node name="SettingsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Exit"
